fixed book alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -147,6 +147,12 @@ select, button{
 .book-title {
   height: 70px;
 	color: white;
+  float:left;
+  color:silver;
+ }
+ .bookLeft{
+  float:left;
+  clear:left;
  }
 
 .two {
@@ -182,6 +188,9 @@ select, button{
 
 .col-md-2 {
 	padding: 3%;
+}
+.col-md-6{
+  padding: 2%;
 }
 
 #movie-logo {
